--- a/src/scss/components/_cookie.scss
+++ b/src/scss/components/_cookie.scss
@@ -1,14 +1,12 @@
 #cookie-card {
     position: fixed;
     display: block;
-    bottom: 1.5rem;
-    right: 1.5rem;
+    bottom: 0;
+    right: 0;
     z-index: 100;
+    margin: 1.5rem;
     
     .cookie-icon {
         font-size: 1.2rem;
     }
 }
-
-
-
